<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Numeral Pursuit</string>
    <string name="title_activity_main">Numeral Pursuit</string>
    <string name="activity_create_user_pass">CreateUserPass</string>
    <string name="title_activity_app_info" />
    <string name="title_activity_play_random_non_timed_game">PlayRandomNontimed</string>
    <string name="game_activity">GameActivity</string>
    <string name="title_activity_srng_act">PlayRNGAct</string>
    <string name="recv_rng_op_string_intent">com.games.numbercrunch.RNGServMes.onReceived</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_active_games">ActiveGamesAct</string>
    <string name="act_games_list_gameids">Game Id</string>
    <string name="act_games_list_opponent">Opponent</string>
    <string name="button_start_rng">Play against a random opponent</string>
    <string name="button_see_current_games">Ongoing games</string>
    <string name="button_play_against_friend">Play against a friend</string>
    <string name="button_add_friend">Add a friend to play against</string>
    <string name="title_activity_open_gl_test">MainActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="forfeit_game">Forfeit Game</string>
    <string name="chat_button">Chat</string>
    <string name="send_message_button">Send message button</string>
    <string name="title_activity_friends">MainActivity</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">MainActivity</string>
    <string name="friend_request_gmail_adress">Friend gmail address</string>
    <string name="new_friend_request">New friend request</string>
    <string name="nickname">Nickname:</string>
    <string name="note">Note</string>
    <string name="id">Id:</string>
    <string name="invite_to_game">Invite to a game</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="title_activity_invited_to_game">InvitedToGameActivity</string>
    <string name="header_invited_to_game">You were invited to a game</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="ask_accept_invite">&lt;UserName> is asking you to play, do you want to?</string>
    <string name="gamename">Game name:</string>
    <string name="opponent_name">Opponent:</string>
    <string name="active_games">Active Games</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="username">Username</string>
    <string name="contacts">Contacts</string>
    <string name="finished_games_activity">Finished Games Activity</string>
    <string name="finished_games">Finished Games</string>
    <string name="result">Result:</string>
    <string name="refresh_game">Refresh game</string>
    <string name="remove_all">Remove all</string>
    <string name="receive_notifications_about_game_updates">Receive notifications about game moves</string>
    <string name="receive_requests_for_games_from_friends">Receive requests for games from friends</string>
    <string name="notify_about_chat_from_friends">Notify about chat from friends</string>
    <string name="notify_about_chat_in_games">Notify about chat in games</string>
    <string name="play_the_remaining_tiles_alone">Play the remaining tiles alone</string>
    <string name="game_stats">Game Stats</string>
    <string name="game_type">Gametype:</string>
    <string name="end_due_to">End due to:</string>
    <string name="gameboard_opacity">Gameboard opacity (%)</string>
    <string name="zero_to_hundred">0–100</string>
    <string name="title_activity_game_activity_single_player">GameActivitySinglePlayer</string>
    <string name="pick_game_background_image">Game background</string>
    <string name="ads_test_devices">635E58EBB675D93CEBDE6BFEE1F91A6A,B845A1EF593239CA4A44AEAB2E36BCB5,BBED0D14036C13FBA103941660F39C0D,95EF4548C3C78B6ACB3804800A04A938,2B271E1AB43BED4855824AEA26143122</string>
    <string name="dash">"vs"</string>
    <string name="refresh">Refresh</string>
    <string name="adress">Address:</string>
    <string name="gameexplanation">The object of the game is to fill all the squares with number tiles. No tile can be placed in the same row, column or 3x3 subgrid as another tile of the same value. The game will check if it is possible to solve the entire grid using your placement, and if it is, you earn a point. You lose a point if it is not a possibility. Good luck :)</string>
    <string name="help">Help</string>
    <string name="take_screenshot">Take screenshot</string>

</resources>