<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        android:id="@+id/friend_name"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/contacts"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" >
    </View>

    <ListView
        android:id="@+id/list_view_friends"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/button_refresh"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:background="@drawable/drawable_refresh"
            android:contentDescription="@string/refresh" />

        <EditText
            android:id="@+id/edittext_new_friend_email"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_weight="10"
            android:hint="@string/friend_request_gmail_adress"
            android:inputType="textEmailAddress" />

        <ImageButton
            android:id="@+id/button_friend_request"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:background="@drawable/drawable_add_person"
            android:contentDescription="@string/new_friend_request" />
    </LinearLayout>

</LinearLayout>