<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InvitedToGameActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/header_invited_to_game"
        android:textSize="20sp" >
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" >
    </View>

    <View
        android:layout_width="match_parent"
        android:layout_height="80dip" >
    </View>

    <TextView
        android:id="@+id/textview_who_invited"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/ask_accept_invite"
        android:textSize="17sp" >
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_accept"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_drawable"
            android:text="@string/accept"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerVertical" >
        </View>

        <Button
            android:id="@+id/button_reject"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_drawable"
            android:text="@string/reject"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>