<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:text="@string/game_stats"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:text="@string/opponent_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_opponent_name"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/game_stats"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:text="@string/gamename"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_game_name"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/game_stats"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:text="@string/result"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_result"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/game_stats"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:text="@string/game_type"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_gametype"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/game_stats"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left|center_vertical"
            android:text="@string/end_due_to"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textview_end_due_to"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/game_stats"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_play_singleplayer"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="1dip"
        android:background="@drawable/button_drawable"
        android:text="@string/play_the_remaining_tiles_alone"
        android:textColor="#FFFFFF" >
    </Button>



</LinearLayout>