<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ffffff" >
    </View>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/receive_notifications_about_game_updates" >
                </TextView>

                <View
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="10" >
                </View>

                <CheckBox
                    android:id="@+id/setting_notify_game_updates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center_vertical|right|" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/receive_requests_for_games_from_friends" >
                </TextView>

                <View
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="10" >
                </View>

                <CheckBox
                    android:id="@+id/setting_notify_game_requests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center_vertical|right|" />
            </LinearLayout>

<!--             <LinearLayout -->
<!--                 android:layout_width="match_parent" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:orientation="horizontal" > -->

<!--                 <TextView -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="match_parent" -->
<!--                     android:gravity="center_vertical" -->
<!--                     android:text="@string/notify_about_chat_from_friends" > -->
<!--                 </TextView> -->

<!--                 <View -->
<!--                     android:layout_width="0dip" -->
<!--                     android:layout_height="match_parent" -->
<!--                     android:layout_weight="10" > -->
<!--                 </View> -->

<!--                 <CheckBox -->
<!--                     android:id="@+id/setting_notify_chat_from_friend" -->
<!--                     android:layout_width="wrap_content" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:checked="true" -->
<!--                     android:gravity="center_vertical|right|" /> -->
<!--             </LinearLayout> -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/notify_about_chat_in_games" >
                </TextView>

                <View
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="10" >
                </View>

                <CheckBox
                    android:id="@+id/setting_notify_in_game_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="center_vertical|right|" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/username" >
                </TextView>

                <View
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="10" >
                </View>

                <EditText
                    android:id="@+id/setting_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right|"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/gameboard_opacity" >
                </TextView>

                <View
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="10" >
                </View>

                <EditText
                    android:id="@+id/setting_opacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right|"
                    android:hint="@string/zero_to_hundred"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/pick_game_background_image" >
                </TextView>

                <TextView
                    android:id="@+id/setting_backpath"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:gravity="right|center_vertical"
                    android:textSize="12sp" >
                </TextView>

                <ImageButton
                    android:id="@+id/button_background_picker"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:background="@drawable/drawable_image_picker"
                    android:contentDescription="@string/forfeit_game"
                    android:text="@string/forfeit_game"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_marginRight="1dip"
            android:layout_weight="1"
            android:background="@drawable/button_drawable"
            android:text="@string/save"
            android:textColor="#FFFFFF" />

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@drawable/button_drawable"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" >
        </Button>
    </LinearLayout>

</LinearLayout>