<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/friend" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/adress" />

                <TextView
                    android:id="@+id/textview_flipped_friend_id"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/adress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/nickname" />

                <TextView
                    android:id="@+id/textview_flipped_friend_name"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/nickname" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="10"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_flipped_friend_invite_game"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:text="@string/invite_to_game"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_flipped_remove_friend"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:text="@string/remove_friend"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>